# DoIP

./: Cargo.toml
src/: doip_client.rs  doip_server.rs  lib.rs  main.rs  message.rs
src/message/: alive_check.rs  diag_message.rs  diag_power_mode.rs  entity_status.rs  header.rs  header_nack.rs  routing_activation.rs  vehicle_identification.rs
