[package]
name = "doip"
version = "0.1.0"
edition = "2021"
[lib]
name = "doip_lib"
path = "src/lib.rs"
[[bin]]
name = "my_bin"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
